# RainbowDAO-Protocol-Ink-Test-Version-04

./: README.md
core/: Cargo.toml  lib.rs
daoBaseInfo/: Cargo.toml  lib.rs
daoCategory/: Cargo.toml  lib.rs
daoFactory/: Cargo.toml  lib.rs
daoGovnance/: Cargo.toml  lib.rs
daoManage/: Cargo.toml  lib.rs
daoProposal/: Cargo.toml  lib.rs
daoUsers/: Cargo.toml  lib.rs
daoVault/: Cargo.toml  lib.rs
daoVote/: Cargo.toml  lib.rs
erc20/: Cargo.toml  lib.rs
erc20Factory/: Cargo.toml  lib.rs
incomeCategory/: Cargo.toml  lib.rs
incomeProportion/: Cargo.toml  lib.rs
multiSignManage/: Cargo.toml  lib.rs
privilegeManage/: Cargo.toml  lib.rs
rainbowGovnance/: Cargo.toml  lib.rs
rewardSystem/: Cargo.toml  lib.rs
roleManage/: Cargo.toml  lib.rs
roleManage_y/: lib.rs
routeManage/: Cargo.toml  lib.rs
templateManage/: Cargo.toml  lib.rs
