[package]
name = "route_manage"
version = "0.1.0"
authors = ["michaelHookon" ,"michealhookon@gmail.com"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3",path = "../ink/crates/primitives", default-features = false }
ink_metadata = { version = "3.0.0-rc3",path = "../ink/crates/metadata", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3",path = "../ink/crates/env", default-features = false }
ink_storage = { version = "3.0.0-rc3",path = "../ink/crates/storage", default-features = false }
ink_lang = { version = "3.0.0-rc3",path = "../ink/crates/lang", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"], optional = true }

dao_manage = {version = "0.1.0", path = "../daoManage",  default-features = false, features = ["ink-as-dependency"]}
dao_vote = {version = "0.1.0", path = "../daoVote",  default-features = false, features = ["ink-as-dependency"]}


[lib]
name = "route_manage"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "dao_manage/std",
]
ink-as-dependency = []
